<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/app_icon"
        android:contentDescription="@string/app_icon"/>

    <TextView
        android:id="@+id/title_spin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_toEndOf="@+id/image_view"
        android:fontFamily="@font/poppins_black_italic"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:text="@string/generic_electical_energy"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_spin"
        android:layout_alignEnd="@+id/title_spin"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:layout_toEndOf="@+id/image_view"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:text="@string/cost_calculate"
        android:textColor="@color/colorSecondary"
        android:textSize="12sp"
        android:textStyle="bold" />
</RelativeLayout>