<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textview_history_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/poppins_bold"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:text="@string/history"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_utils_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_history_title"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:text="@string/units"
        android:textColor="@color/colorSecondary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_cost_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_history_title"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:text="@string/cost"
        android:textColor="@color/colorSecondary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_history_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_utils_title"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/history_item"
        tools:itemCount="3"/>

</RelativeLayout>